<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnTipPercent2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnTipPecent1"
        android:layout_alignBottom="@+id/btnTipPecent1"
        android:layout_centerHorizontal="true"
        android:text="@string/tipPercentLabelCenter" 
		android:onClick="calculateTip"/>
         
    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/amountLabel"
         >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvtipAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTipPecent1"
        android:layout_marginTop="98dp"
        android:layout_toLeftOf="@+id/btnTipPercent2"
        android:text="@string/tipLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnTipPecent1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvtipAmountLabel"
        android:layout_below="@+id/etAmount"
        android:layout_marginRight="16dp"
        android:layout_marginTop="71dp"
        android:onClick="calculateTip"
        android:text="@string/tipPercentLabelLeft" />

    <Button
        android:id="@+id/btnTipPercent3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvtipAmountLabel"
        android:layout_alignLeft="@+id/tvTipAmount"
        android:layout_marginLeft="20dp"
        android:onClick="calculateTip"
        android:text="@string/tipPercentLabelRight" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvtipAmountLabel"
        android:layout_alignTop="@+id/tvtipAmountLabel"
        android:layout_toRightOf="@+id/btnTipPercent2"
        android:hint="@string/DefaultTipAmountLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>